2003-12-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* rules.mak (WINEBUILD): Define.
	* tools/winebuild/Makefile: New file.
	* tools/winebuild/import.c (ldcombine_files): Replace mkstemps with Win32
	APIs.
	* tools/winebuild/main.c (main): Win16 specs and relays are not supported.
	* tools/winebuild/spec32.c (EXCEPTION_WINE_STUB, EH_NONCONTINUABLE):
	Define.
	(BuildDef32File): Don't emit PRIVATE.

2003-12-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/winebuild: Import winebuild from Wine (D20031208).

2003-12-08  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/win32k/text.h (NtGdiExtTextOut): Follow ExtTextOut prototype.
	* lib/gdi32/objects/text.c (ExtTextOutW): Call NtGdiExtTextOut().
	* lib/user32/controls/edit.c (EDIT_BuildLineDefs_ML): Order parameters to
	CreateRectRgn().
	* lib/user32/windows/draw.c (TabbedTextOutA): Implement.
	(TEXT_TabbedTextOut): New function.
	(TabbedTextOutW): Implement.
	* subsys/win32k/objects/text.c (NtGdiExtTextOut): Call NtGdiTextOut() for
	now.

2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/windows/accel.c (U32IsValidAccelMessage): Translate WM_KEYUP
	and WM_SYSKEYUP messages.
	(TranslateAcceleratorA): Returntype of RtlMultiByteToUnicodeN is NTSTATUS,
	so interpret it as such.
	* subsys/win32k/ntuser/accelerator.c (NtUserDestroyAcceleratorTable):
	Call ObmCloseHandle() before destroying the object.
	(IntTranslateAccelerator): New function.
	(NtUserTranslateAccelerator): Partial implementation.

2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/win32k/include/accelerator.h: New file.
	* subsys/win32k/ntuser/accelerator.c: Ditto.
	* include/win32k/ntuser.h (NtUserDestroyAcceleratorTable): Make returntype
	BOOLEAN.
	* subsys/win32k/makefile (NTUSER_OBJECTS): Add ntuser/accelerator.o.
	* subsys/win32k/include/object.h (USER_OBJECT_TYPE): Add otAcceleratorTable.